# stock-review-alpha-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: f1ce8fd60b50_initial_migration.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/services/: daily_market_prefill.py  data_refresh.py  scheduler.py
backend/app/services/data_sources/: __init__.py  akshare_adapter.py  baostock_adapter.py  base.py  tushare_adapter.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  (+4 more)
backend/tests/: test_ai_actions.py  test_daily_reviews.py  test_data_driven_research.py  test_llm_provider.py  test_main.py  test_research_loop.py
decisions/: 0001-tech-stack.md  0002-phase0-retrospective.md  0003-current-state.md  0004-current-state.md
docs/: AI_RIGHT_PANEL_CHECKLIST.md  DAILY_REVIEW_TEMPLATE_SYSTEM.md  DATA_DRIVEN_RESEARCH_ASSISTANT.md  LLM_PROVIDER_INTERFACE.md  api-contract.md  data-architecture.md  design-system.md  investment-themes.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/services/: aiService.ts  api.ts  dailyReviewService.ts  dataService.ts  researchService.ts  stockService.ts
scripts/: backup.py  check_ai_right_panel.ps1
tasks/: README.md  T-001.md  T-002.md  T-003.md  T-004.md  T-005.md  T-006.md  T-007.md  T-008.md  T-009.md  T-010.md  T-011.md  T-012.md  T-013.md  T-014.md
